--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "php": ">=5.5.9",
         "graham-campbell/manager": "^2.3",
         "illuminate/contracts": "5.1.*|5.2.*",
-        "illuminate/support": "5.1.*|5.2.*"
+        "illuminate/support": "5.1.*|5.2.*",
+        "google/apiclient": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8|^5.0"
