Add relevant manager classes

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "websight/l5-google-client",
     "description": "Wraps a authenticated google api client",
+    "keywords": ["google", "api", "client", "manager", "laravel", "lumen"],
     "license": "MIT",
     "authors": [
         {
@@ -16,6 +17,8 @@
         "google/apiclient": "*"
     },
     "require-dev": {
+        "graham-campbell/testbench": "^3.1",
+        "mockery/mockery": "^0.9.4",
         "phpunit/phpunit": "^4.8|^5.0"
     },
     "autoload": {
