--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,3 +2,11 @@ checks:
   php:
     code_rating: true
     duplication: true
+build:
+  tests:
+    override:
+      -
+        command: 'phpunit --coverage-clover=build/coverage.xml'
+        coverage:
+            file: 'build/coverage.xml'
+            format: 'php-clover'
